--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,23 +6,18 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup Firefox
-        uses: browser-actions/setup-firefox@latest
+      - uses: actions/checkout@v3
+      - uses: browser-actions/setup-firefox@latest
         with:
-          firefox-version: "54.0"
-      - name: Download geckodriver
-        uses: browser-actions/setup-geckodriver@latest
+          firefox-version: "108.0"
+      - uses: browser-actions/setup-geckodriver@latest
         with:
-          geckodriver-version: "0.18.0"
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
+          geckodriver-version: "0.32.0"
+      - uses: ruby/setup-ruby@v1
         with:
           ruby-version: "2.7.7"
           bundler-cache: true
-      - name: Start MongoDB
-        uses: supercharge/mongodb-github-action@1.7.0
+      - uses: supercharge/mongodb-github-action@1.7.0
         with:
           mongodb-version: "5"
           mongodb-db: slack_api_explorer_test
